<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutOptimizeMain"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="#5C5C5C">
<!-- first line for time show -->
	<RelativeLayout android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
    	<TextView
        	android:id="@+id/tv_opt_prefix_text"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/spm_opt_dialog_prefix_start"
        	android:textAppearance="?android:attr/textAppearanceMedium"
        	android:textColor="#ffffff"
        	android:visibility="gone" />

    	<TextView
        	android:id="@+id/tv_opt_postfix_text"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/tv_opt_prefix_text"
        	android:textAppearance="?android:attr/textAppearanceMedium"
        	android:text="@string/spm_string_empty" 
        	android:textColor="#ffffff"
        	android:visibility="gone"/>
	
<!-- the comment line as below -->

    <TextView
        android:id="@+id/tv_opt_below_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_prefix_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:text="@string/spm_opt_dialog_below_text" />

<!-- 1 data line -->
    <TextView
        android:id="@+id/tv_opt_data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_below_text"
        android:text="@string/spm_network_show" 
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/tv_opt_data_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_below_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentRight="true"
        android:text="@string/spm_string_empty"
        android:textColor="#ffffff"
        />
    
<!-- 2 wlan line -->    
    <TextView
        android:id="@+id/tv_opt_wlan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_data_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spm_wifi_show"
        android:visibility="gone" 
        android:textColor="#ffffff"
        />

    <TextView
        android:id="@+id/tv_opt_wlan_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_data_value"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spm_opt_alert_value_off"
        android:visibility="gone" 
        android:textColor="#ffffff"
        />
        
<!-- 3 bluetooth line -->    
    <TextView
        android:id="@+id/tv_opt_bluetooth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_wlan_text"
        android:text="@string/spm_bluetooth_show" 
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:textColor="#ffffff"
        />

    <TextView
        android:id="@+id/tv_opt_bluetooth_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_wlan_value"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spm_opt_alert_value_off"
        android:visibility="gone" 
        android:textColor="#ffffff"
        />
    
<!-- 4 bright line -->
    <TextView
        android:id="@+id/tv_opt_bright_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_bluetooth_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spm_screen_light_show" 
        android:visibility="gone"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tv_opt_bright_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_bluetooth_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentRight="true"
        android:text="@string/spm_string_empty" 
        android:visibility="gone"
        android:textColor="#ffffff"/>
    
<!-- 5 timeout line -->   
    <TextView
        android:id="@+id/tv_opt_timeout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_bright_text"
        android:text="@string/spm_screen_timeout_show" 
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tv_opt_timeout_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_bright_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentRight="true"
        android:text="@string/spm_string_empty" 
        android:visibility="gone"
        android:textColor="#ffffff"/>
    
<!-- 6 gps line -->    
    <TextView
        android:id="@+id/tv_opt_gps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_timeout_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spm_gps_show" 
        android:visibility="gone"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tv_opt_gps_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_timeout_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentRight="true"
        android:text="@string/spm_opt_alert_value_off" 
        android:visibility="gone"
        android:textColor="#ffffff"/>
    
<!-- 7 touch line -->    
    <TextView
        android:id="@+id/tv_opt_touch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_gps_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/spm_touch_feel_show" 
        android:visibility="gone"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tv_opt_touch_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_opt_gps_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentRight="true"
        android:text="@string/spm_string_empty" 
        android:visibility="gone"
        android:textColor="#ffffff"/>
	</RelativeLayout>
</LinearLayout>