<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EAEAEA"
    >    
       <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/life_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_time_text"
            android:textColor="#3E3A39"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="16dip"
            android:layout_marginTop="3dip"/>
        <TextView  android:id="@+id/life_time_text_show"
            android:layout_toRightOf="@id/life_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F46987"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="3dip"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView android:id="@+id/next_time_hour_num_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64dip"
            android:text="@string/spm_next_hour"
            android:textColor="#F46987"/>
        <TextView android:id="@+id/next_time_hour_text_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/next_time_hour_num_show"
            android:textSize="20dip"
            android:layout_alignBaseline="@id/next_time_hour_num_show"
            android:text="@string/spm_hour"
            android:textColor="#F46987"/>
        <TextView android:id="@+id/next_time_min_num_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64dip"
            android:layout_toRightOf="@id/next_time_hour_text_show"
            android:text="@string/spm_next_minute"
            android:textColor="#F46987"/>
        <TextView android:id="@+id/next_time_min_text_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/next_time_min_num_show"
            android:textSize="20dip"
            android:layout_alignBaseline="@id/next_time_min_num_show"
            android:text="@string/spm_minute"
            android:textColor="#F46987"/>
    </RelativeLayout>
    
     <RelativeLayout android:layout_width="280dip"
        android:id="@+id/button_relativelayout"
        android:layout_height="91dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/spm_bg_energy_conservation_base"
        android:layout_marginBottom="16dip">
        <RelativeLayout android:layout_width="90dip"
        	android:layout_height="91dip"
        	android:gravity="center"
        	android:id="@+id/spm_superman_rl">
        	<FrameLayout android:layout_width="wrap_content"
        	    android:layout_height="wrap_content">
        		<ImageView android:layout_width="wrap_content"
        		    android:layout_height="wrap_content"
        		    android:background="@drawable/spm_lw_bg_power_anmation"/>
        		<ImageView android:id="@+id/spm_power_superman"
                		android:layout_width="wrap_content"
                		android:layout_height="wrap_content"
                		android:background="@drawable/lw_high_power_animation"/>
        	</FrameLayout>
        </RelativeLayout>
        <Button android:id="@+id/spm_power_button"
            android:layout_toRightOf="@id/spm_superman_rl"
            android:layout_width="180dip"
            android:layout_height="45dip"
            android:layout_marginTop="22dip"
            android:layout_marginBottom="20dip"
            android:background="@drawable/spm_bt_energy_conservation"
            android:text="@string/spm_power_optimization"
            android:textSize="23dip"
            android:textColor="#c5c7c9"/>
    </RelativeLayout>
   	<ScrollView android:id="@+id/ScrollView" android:layout_width="fill_parent"  
    android:layout_height="wrap_content" android:scrollbars="vertical">
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout android:id="@+id/relativeLayoutData" 
            android:layout_width="fill_parent"
            android:layout_height="45dip">
            <ImageView android:id="@+id/data_choise_icon"
                android:background="@drawable/spm_data"
          		android:layout_alignParentLeft="true"
          		android:layout_width="wrap_content"
          		android:layout_marginLeft="16dip"
          		android:layout_centerVertical="true"
          		android:layout_height="wrap_content"/>
            <TextView android:id="@+id/data_choise_text"
          		android:layout_toRightOf="@id/data_choise_icon"
          		android:text="@string/spm_network_show"
          		android:textAppearance="?android:attr/textAppearanceMedium"
          		android:textColor="#3E3A39"
          		android:layout_marginLeft="12dip"
          		android:layout_centerVertical="true"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        	<android.widget.LewaCheckBox android:id="@+id/data_choise_check"          		
          		android:layout_alignParentRight="true"
          		android:layout_marginTop="5dip" 
          		android:layout_marginRight="15dip"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#32999999"/>
		<RelativeLayout android:id="@+id/relativeLayoutWlan" 
		    android:layout_width="fill_parent"
            android:layout_height="45dip">
            <ImageView android:id="@+id/wlan_choise_icon"
                android:background="@drawable/spm_wlan"
          		android:layout_alignParentLeft="true"
          		android:layout_width="wrap_content"
          		android:layout_marginLeft="16dip"
          		android:layout_centerVertical="true"
          		android:layout_height="wrap_content"/>
            <TextView android:id="@+id/wlan_choise_text"
          		android:layout_toRightOf="@id/wlan_choise_icon"
          		android:text="@string/spm_wifi_show"
          		android:textAppearance="?android:attr/textAppearanceMedium"
          		android:textColor="#3E3A39"
          		android:layout_marginLeft="12dip"
          		android:layout_centerVertical="true"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        	<android.widget.LewaCheckBox android:id="@+id/wlan_choise_check"          		
          		android:layout_alignParentRight="true"
          		android:layout_marginTop="5dip" 
          		android:layout_marginRight="15dip"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#32999999"/>
        <RelativeLayout android:id="@+id/relativeLayoutBluetooth" 
            android:layout_width="fill_parent"
            android:layout_height="45dip">
            <ImageView android:id="@+id/bluetooth_choise_icon"
                android:background="@drawable/spm_bluetooth"
          		android:layout_alignParentLeft="true"
          		android:layout_width="wrap_content"
          		android:layout_marginLeft="16dip"
          		android:layout_centerVertical="true"
          		android:layout_height="wrap_content"/>
            <TextView android:id="@+id/bluetooth_choise_text"
          		android:layout_toRightOf="@id/bluetooth_choise_icon"
          		android:text="@string/spm_bluetooth_show"
          		android:textAppearance="?android:attr/textAppearanceMedium"
          		android:textColor="#3E3A39"
          		android:layout_marginLeft="12dip"
          		android:layout_centerVertical="true"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        	<android.widget.LewaCheckBox android:id="@+id/bt_choise_check"          		
          		android:layout_alignParentRight="true"
          		android:layout_marginTop="5dip" 
          		android:layout_marginRight="15dip"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#32999999"/>
        <RelativeLayout android:id="@+id/relativeLayoutLight" 
            android:layout_width="fill_parent"
            android:layout_height="45dip">
            <ImageView android:id="@+id/screen_light_choise_icon"
                android:background="@drawable/spm_screen"
          		android:layout_alignParentLeft="true"
          		android:layout_width="wrap_content"
          		android:layout_marginLeft="16dip"
          		android:layout_centerVertical="true"
          		android:layout_height="wrap_content"/>
            <TextView android:id="@+id/screen_light_choise_text"
          		android:layout_toRightOf="@id/screen_light_choise_icon"
          		android:text="@string/spm_screen_light_show"
          		android:textAppearance="?android:attr/textAppearanceMedium"
          		android:textColor="#3E3A39"
          		android:layout_marginLeft="12dip"
          		android:layout_centerVertical="true"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        	<TextView android:id="@+id/screen_light_choise_value"
          		android:layout_alignParentRight="true"
          		android:layout_marginRight="25dip"
          		android:layout_marginTop="15dip"
          		android:text="@string/spm_auto"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#32999999"/>
        <RelativeLayout android:id="@+id/relativeLayoutTimeout" 
            android:layout_width="fill_parent"
            android:layout_height="45dip">
            <ImageView android:id="@+id/lock_screen_choise_icon"
                android:background="@drawable/spm_time"
          		android:layout_alignParentLeft="true"
          		android:layout_width="wrap_content"
          		android:layout_marginLeft="16dip"
          		android:layout_centerVertical="true"
          		android:layout_height="wrap_content"/>
            <TextView android:id="@+id/lock_screen_choise_text"
          		android:layout_toRightOf="@id/lock_screen_choise_icon"
          		android:text="@string/spm_screen_timeout_show"
          		android:textAppearance="?android:attr/textAppearanceMedium"
          		android:textColor="#3E3A39"
          		android:layout_marginLeft="12dip"
          		android:layout_centerVertical="true"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        	<TextView android:id="@+id/lock_screen_choise_value"
          		android:layout_alignParentRight="true"
          		android:layout_marginRight="25dip"
          		android:text="@string/spm_second"
          		android:layout_marginTop="15dip"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#32999999"/>
        <RelativeLayout android:id="@+id/relativeLayoutGps" 
            android:layout_width="fill_parent"
            android:layout_height="45dip">
            <ImageView android:id="@+id/gps_choise_icon"
                android:background="@drawable/spm_gps"
          		android:layout_alignParentLeft="true"
          		android:layout_width="wrap_content"
          		android:layout_marginLeft="16dip"
          		android:layout_centerVertical="true"
          		android:layout_height="wrap_content"/>
            <TextView android:id="@+id/gps_choise_text"
          		android:layout_toRightOf="@id/gps_choise_icon"
          		android:text="@string/spm_gps_show"
          		android:textAppearance="?android:attr/textAppearanceMedium"
          		android:textColor="#3E3A39"
          		android:layout_marginLeft="12dip"
          		android:layout_centerVertical="true"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        	<android.widget.LewaCheckBox android:id="@+id/gps_choise_check"          		
          		android:layout_alignParentRight="true"
          		android:layout_marginTop="5dip" 
          		android:layout_marginRight="15dip"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#32999999"/>
        <RelativeLayout android:id="@+id/relativeLayoutFeedback" 
            android:layout_width="fill_parent"
            android:layout_height="45dip">
            <ImageView android:id="@+id/touch_choise_icon"
                android:background="@drawable/spm_feedback"
          		android:layout_alignParentLeft="true"
          		android:layout_width="wrap_content"
          		android:layout_marginLeft="16dip"
          		android:layout_centerVertical="true"
          		android:layout_height="wrap_content"/>
            <TextView android:id="@+id/touch_choise_text"
          		android:layout_toRightOf="@id/touch_choise_icon"
          		android:text="@string/spm_touch_feel_show"
          		android:textAppearance="?android:attr/textAppearanceMedium"
          		android:textColor="#3E3A39"
          		android:layout_marginLeft="12dip"
          		android:layout_centerVertical="true"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        	<android.widget.LewaCheckBox android:id="@+id/touch_choise_check"          		
          		android:layout_alignParentRight="true"
          		android:layout_marginTop="5dip" 
          		android:layout_marginRight="15dip"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
